Crossorigin e home file management
